# game_server

./: .gitignore
access/: ClientManager.cpp  client_async.cpp  client_async.h  list.h  listener.cpp  listener_bind.cpp  main.cpp  non_copyable.cpp  poll_thread.h  poller.cpp  socket.cpp  socket.h  thread_mutex.cpp  threadpool.cpp  threadpool.h  unix_socket.h  utils.h
chengdulc/: Common.h  GameLogic.cpp  GameLogic.h  Makefile  chengdulc.sln  chengdulc.vcxproj  chengdulc.vcxproj.filters  client.cc  client.h  game.cc  game.h  gameproto.pb.cc  gameproto.pb.h  jpacket.cc  jpacket.h  loginproto.pb.cc  loginproto.pb.h  player.cc  player.h  ppacket.cc  ppacket.h  proto.h  redis_client.cc  restart.sh  rmk.sh  start.sh  stop.sh  subproject.bat  table.cc  table.cc.bak  table.h  tags  test.cc  test.sh  update202.sh  zjh.cc  zjh.h
chengdulc/Debug/: vc120.idb
chengdulc/Debug/chengdulc.tlog/: CL.read.1.tlog  CL.write.1.tlog  chengdulc.lastbuildstate  cl.command.1.tlog
chengdulc/conf/: luanchu.conf  luanchu.pid
chengdulc/docs/: 乐山贰柒拾 代理改.docx
chengdulc/lib/: libjson_linux-gcc-5.4.0_libmt.a_
chengdulc/libphz/: Common.h  GameLogic.cpp  GameLogic.h  Makefile  log.cc  test  test.cc
chengdulc/protoco/: gameproto.proto  gameproto.proto_bak  loginproto.proto
chengdulc/protoco/新建文件夹/: gameproto.proto
fist/: make.rules
fist/app/battle/: BattleDemo.cpp  BattleDemo.h  LogicBattleManager.cpp  LogicBattleManager.h  LogicChampionshipManager.cpp  LogicChampionshipManager.h  LogicFriendManager.cpp  LogicHeroManager.cpp  LogicHeroManager.h  LogicManager.cpp  LogicManager.h  LogicMartialClubManager.cpp  LogicOnhookManager.h  LogicPropsManager.cpp  LogicQueueManager.cpp  LogicResourceManager.cpp  LogicResourceManager.h  LogicUserGradeManager.h  LogicUserManager.cpp  LogicUserManager.h  ServerInc.h  UserManager.cpp  UserManager.h
fist/app/common/: Common.h
fist/app/config/: ActivityConfig.pb.cpp  ActivityConfig.pb.h  AddWeight.pb.h  (+36 more)
fist/as/: ProtoBattleDemo.proto  ProtoChampionship.proto  ProtoHero.proto  ProtoPush.proto
fist/proto/: Admin.pb.cc  Common.pb.h  Common.proto
fist/save/: Offline.proto  UserGrade.pb.cc  UserGrade.pb.h  UserGrade.proto
fist_card/as/: ProtoBattle.proto  ProtoBattleBase.proto  ProtoBattleDemo.proto  ProtoBattleDemo1.proto  ProtoHero.proto  ProtoMartialClub.proto  ProtoNotify.proto  User.proto
fist_card/proto/: Admin.pb.h  Admin.proto  Common.pb.cc  m.sh
fist_card/save/: Offline.pb.cc  Offline.pb.h  Save.pb.cc  Save.pb.h  SaveInc.h
fmh5/: .project  make.rules  makefile
fmh5/access/: access
fmh5/as/: ProtoBuilding.proto  User.proto
fmh5/cgiapp/: applib.rules
fmh5/proto/: Admin.pb.cc  Admin.pb.h  Common.pb.cc  Common.pb.h  ProtoArchive.pb.cc  ProtoArchive.pb.d  ProtoArchive.pb.h  ProtoUser.pb.cc  ProtoUser.pb.h
fmh5_cmake/: CMakeCache.txt  CMakeLists.txt  Makefile
fmh5_cmake/app/: CMakeCache.txt  Makefile  cmake_install.cmake
fmh5_cmake/app/common/: CMakeLists.txt  Makefile  cmake_install.cmake
fmh5_cmake/cgiapp/: CMakeLists.txt  Makefile
fmh5_cmake/cgiapp/cgi/: CMakeLists.txt  CgiAlliance.cpp  CgiC9Deliver.cpp  CgiNew4399Deliver.cpp  CgiOPPODeliver.cpp  CgiOPPOPay.cpp  CgiQQDeliver.cpp  CgiQQPay.cpp  CgiRank.cpp  CgiUpdateSave.cpp  CgiWBScore.cpp  CgiXMFourDeliver.cpp  Makefile
fmh5_cmake/cgiapp/kernel/: BattleSocket.cpp  CMakeLists.txt  Makefile
fmh5_cmake/proto/: Makefile
fmh5_cmake/tools/: lastdaycoin_rank.sh  prosperity_rank.sh  readRank.php  sevendaycoin_rank.sh
fmh5_m/: make.rules
fmh5_m/app/: applib.rules
fmh5_m/proto/: Admin.pb.d  Common.pb.d  ProtoUser.pb.d
fmh5_m/save/: Save.pb.d
fmh5_m/tools/: FuzzyQuery.php  accthumbsup_rank.sh  level_rank.sh  thirtydaycoin_rank.sh
rpg/: make.rules
rpg/app/: applib.rules  makefile
rpg/baselib/: base.rules
rpg/script/: Activity_config.py  advance_config.py  attribute_config.py  bag_config.py  boss_config.py  card_attr_config.py  card_group.py  card_star_config.py  card_suit.py  copy_config.py  drop_config.py  equip_slot_config.py  fashion_config.py  fashion_suit_config.py  gem_target_config.py  gift_config.py  hang_config.py  item_config.py  item_money_config.py  json_to_excel.py  level_config.py  magic_config.py  magic_tower.py  mission_config.py  mission_config.py.bak  monster_config.py  msg.py  onlineReward_config.py  partnerIsland_config.py  reincarn_config.py  ring_config.py  role_suit.py  scene_config.py  scene_config_add.py  shop_cell_config.py  skill_config.py  title_config.py  zhanling_config.py  zhuling_attr.py
rpg/transition/: Process.py
server/: make.rules  makefile
server/access/: BattleManager.cpp  BattleManager.h  ClientManager.h  address.cpp  address.h  battle_async.cpp  battle_async.h  binpacket.h  config.cpp  config.h  crc_16.cpp  crc_16.h  exception.h  list_hash.h  listener.h  makefile  non_copyable.h  option.h  poll_thread.cpp  poller.h  proctitle.h  protocoldef.h  thread.cpp  thread.h  thread_mutex.h  type_trait.h  utils.cpp  uvlog.cpp  uvlog.h
server/app/: applib.rules  makefile
server/as/: DataCommon.proto  DataConfig.proto  ProtoAttackHarbor.proto  ProtoBattleField.proto  ProtoBuilding.proto  ProtoEquip.proto  ProtoFriend.proto  ProtoGovernAffair.proto  ProtoHero.proto  ProtoMarket.proto  ProtoMine.proto  ProtoMission.proto  ProtoNotify.proto  ProtoOperaBattle.proto  ProtoPass.proto  ProtoPkField.proto  ProtoReward.proto  ProtoScience.proto  ProtoShakeDice.proto  ProtoWeapon.proto  User.proto
server/baselib/: base.mk  base.rules
server/outerlib/: makefile
server/proto/: Bot.pb.cc  Bot.pb.h  Bot.proto  Common.pb.cc  Common.pb.h  Common.proto  comm.h  m.sh
sg5/app/: add_act.sh  applib.mk  makefile
sg5/doc/: ReadMe.txt  simulation.html
sgonline_srv/: makefile
sgonline_srv/app/: makefile
sgonline_srv/baselib/: base.mk  base.rules
sgonline_srv/outerlib/: makefile
toywar_srv/db/: db_create.sql  db_create_v2.sql  toywar.mwb
tradeWar/: make.rules  makefile
tradeWar/app/: applib.mk  makefile
tradeWar/baselib/: base.mk
tradeWar/outerlib/: makefile
transfer_srv/: .cproject  .project
transfer_srv/server/: make.rules
(+4949 files in other folders)
